--- a/src/Components/Dashboard.css
+++ b/src/Components/Dashboard.css
@@ -1,11 +1,7 @@
-/* General Styles */
-.home {
+.dashboardHome {
   padding: 20px;
-  font-family: Arial, sans-serif;
   margin-top: 100px;
 }
-
-
 
 .head {
   display: flex;
@@ -20,8 +16,8 @@
   margin-right: auto;
 }
 
-button {
-  background: linear-gradient(45deg, #7b0b00, #ff4b2b);
+.dashboardHome button {
+  background:  #ff4b2b;
   color: white;
   padding: 10px 18px;
   border: none;
